# opendetection

./: .gitmodules  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/impl/od/common/utils/: ODViewer.hpp  Scene.hpp  Viewer.hpp
common/include/common/utils/: ODFrameGenerator.h
common/include/od/common/bindings/: ODSvmlight.h  Svmlight.h  svmlight.h
common/include/od/common/pipeline/: Detection.h  Detector.h  ODAlgorithmBase.h  ODDetection.h  ODDetector.h  ODObjectDetector.h  ODScene.h  ODTrainer.h  ObjectDetector.h  Scene.h  Trainer.h
common/include/od/common/utils/: FeatureDetector.h  FeatureDetector2D.h  FeatureDetectorInterface.h  FrameGenerator.h  ODFeatureDetector.h  ODFeatureDetector2D.h  ODFeatureDetectorInterface.h  ODFrameGenerator.h  ODShared_pointers.h  ODUtils.h  ODViewer.h  Utils.h  Viewer.h  shared_pointers.h  utils.h
common/src/bindings/: ODSvmlight.cpp  Svmlight.cpp  svmlight.cpp
common/src/pipeline/: Detection.cpp  ODDetection.cpp  ODObjectDetector.cpp  ODScene.cpp  ObjectDetector.cpp  Scene.cpp
common/src/utils/: FeatureDetector.cpp  FeatureDetector2D.cpp  FeatureDetectorInterface.cpp  ODFeatureDetector.cpp  ODFeatureDetector2D.cpp  ODFeatureDetectorInterface.cpp  ODUtils.cpp  ODViewer.cpp  Utils.cpp  Viewer.cpp  utils.cpp
common/utils/: ODFrameGenerator.h
detectors/: CMakeLists.txt
detectors/global2D/: CMakeLists.txt
detectors/global2D/detection/: ODCascadeDetector.h  ODHOGDetector.h
detectors/global3D/: CMakeLists.txt
detectors/impl/od/detectors/global3D/detection/: CADDetector3DGlobal.hpp  ODCADDetector3DGlobal.hpp
detectors/impl/od/detectors/misc/detection/: DetectorMultiAlgo.hpp  ODDetectorMultiAlgo.hpp
detectors/include/detectors/global3D/detection/: ODCADDetector3DGlobal.h
detectors/include/detectors/global3D/training/: ODCADDetectTrainer3DGlobal.h
detectors/include/detectors/local2D/detection/: ODCADRecognizer2DLocal.h
detectors/include/detectors/local2D/training/: ODCADRecogTrainerSnapshotBased.h
detectors/include/od/detectors/global2D/: FaceRecognizer.h  ODFaceRecognizer.h
detectors/include/od/detectors/global2D/annotation/: Annotation.h  Annotator.h
detectors/include/od/detectors/global2D/detection/: CascadeDetector.h  CascadeDetectorImpl.h  CascadeDetectorInterface.h  ConvClassification.h  HOGDetector.h  ODCascadeDetector.h  ODCascadeDetectorImpl.h  ODCascadeDetectorInterface.h  ODFaceDetector.h  ODHOGDetector.h
detectors/include/od/detectors/global2D/localization/: Convolve.h  CreateModel_test.h  Disjoint-set.h  Filter.h  Image.h  Imconv.h  Imutil.h  Misc.h  Pnmfile.h  Segment-graph.h  Segment-image.h  (+2 more)
detectors/include/od/detectors/global3D/: ODPointCloudGlobalMatching.h  PointCloudGlobalMatching.h
detectors/include/od/detectors/local2D/: ImageLocalMatching.h  ODImageLocalMatching.h
detectors/local2D/: CMakeLists.txt
detectors/simple_ransac_detection/: CMakeLists.txt  CsvReader.h  RobustMatcher.cpp  RobustMatcher.h
detectors/src/global2D/: CMakeLists.txt  FaceRecognizer.cpp  ODFaceRecognizer.cpp
detectors/src/global2D/annotation/: Annotation.cpp  Annotator.cpp
detectors/src/global2D/detection/: CascadeDetector.cpp  CascadeDetectorImpl.cpp  ConvClassification.cpp  HOGDetector.cpp  ODCascadeDetector.cpp  ODCascadeDetectorImpl.cpp  ODFaceDetector.cpp  ODHOGDetector.cpp
detectors/src/global2D/localization/: SelectiveSearchBase.cpp  SelectiveSearchModel.cpp
detectors/src/global2D/training/: ConvTrainer.cpp  HOGTrainer.cpp  Network.cpp  ODHOGTrainer.cpp  Solver.cpp
detectors/src/global3D/: CMakeLists.txt  ODPointCloudGlobalMatching.cpp  PointCloudGlobalMatching.cpp
detectors/src/global3D/detection/: CADDetector3DGlobal.cpp  ODCADDetector3DGlobal.cpp
detectors/src/global3D/training/: CADDetectTrainer3DGlobal.cpp  ODCADDetectTrainer3DGlobal.cpp
detectors/src/local2D/: CMakeLists.txt  ImageLocalMatching.cpp  ODImageLocalMatching.cpp
detectors/src/local2D/detection/: CADRecognizer2DLocal.cpp  ODCADRecognizer2DLocal.cpp
detectors/src/local2D/simple_ransac_detection/: CsvReader.cpp  CsvWriter.cpp  Mesh.cpp  Model.cpp  ModelRegistration.cpp  ODCsvReader.cpp  ODCsvWriter.cpp  ODMesh.cpp  ODModel.cpp  ODModelRegistration.cpp  ODPnPProblem.cpp  ODRobustMatcher.cpp  ODUtils.cpp  PnPProblem.cpp  RobustMatcher.cpp  Utils.cpp
detectors/src/local2D/training/: CADRecogTrainerSnapshotBased.cpp  ODCADRecogTrainerSnapshotBased.cpp
detectors/src/misc/: CMakeLists.txt
detectors/src/misc/detection/: DetectorMultiAlgo.cpp  ODDetectorMultiAlgo.cpp
examples/apps/: CMakeLists.txt
examples/apps/buildExample/: CMakeLists.txt  ODVisualizationTest.cpp  VisualizationTest.cpp
examples/apps/cadrecog2D/: od_test_single_db_single_model.cpp  test_single_db_single_model.cpp
examples/apps/global2D/: multihog_app.cpp  od_multihog_app.cpp
examples/apps/version/: opendetection.cpp
examples/apps/visualization/: ODVisualizationTest.cpp
examples/objectdetector/: CMakeLists.txt  cascade_cam.cpp  cascade_files.cpp  cnn_mnist_classification.cpp  cnn_mnist_train_customSolver.cpp  cnn_mnist_train_simple.cpp  face_detector_cam.cpp  face_detector_files.cpp  framegenerator.cpp  hog_train.cpp  image_cadrecog_camera.cpp  image_cadrecog_files.cpp  image_customhog.cpp  image_facerecog.cpp  image_hog_files.cpp  multialgo_files.cpp  multialgo_pc.cpp  od_cascade_cam.cpp  od_cascade_files.cpp  od_example_framegenerator.cpp  od_face_detector_cam.cpp  od_face_detector_files.cpp  od_framegenerator.cpp  od_hog_train.cpp  od_image_cadrecog_camera.cpp  od_image_cadrecog_files.cpp  od_image_customhog.cpp  od_image_facerecog.cpp  od_image_hog_files.cpp  od_multialgo_files.cpp  od_multialgo_pc.cpp  od_pc_global.cpp  od_pc_global_files.cpp  od_pc_global_real_time.cpp  pc_global.cpp  pc_global_files.cpp  pc_global_real_time.cpp
gpu/common/: CMakeLists.txt
gpu/common/src/utils/: FeatureDetector2D.cpp  ODFeatureDetector2D.cpp
gpu/detectors/: CMakeLists.txt
gpu/detectors/src/global2D/: CMakeLists.txt
gpu/detectors/src/global2D/detection/: CascadeDetectorImpl.cpp  ODCascadeDetector.cpp  ODCascadeDetectorImpl.cpp
(+65 files in other folders)
